Fix Screen width

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <div class="home_data">
                 <h1 class="home_title">OUR <br> JOURNEY</h1>
                 <p class="home_desc">
-                    ตลอดเวลานี้เราผ่านอะไรมาด้วยกันบ้างนะ <br>
-                    มาย้อนดูความทรงจำของเราทั้งคู่กันหน่อยดีมั้ย?
+                    <nobr>ตลอดเวลานี้เราผ่านอะไรมาด้วยกันบ้างนะ</nobr><br>
+                    <nobr>มาย้อนดูความทรงจำของเราทั้งคู่กันหน่อยดีมั้ย?</nobr>
                 </p>
                 <a href="#story" class="start_button">ไปเลย!</a>
             </div>
