--- a/index.html
+++ b/index.html
@@ -59,19 +59,9 @@
         <div class="story_container" id="story">
             <!-- DATA -->
             <div class="story_data">
-                <div class="story_gallery">
-                    <div class="column">
-                        <img src="Images/May1.jpg">
-                        <img src="Images/May2.jpg">
-                    </div>
-                    <div class="column">
-                        <img src="Images/May3.jpg">
-                        <img src="Images/May4.jpg">
-                        <img src="Images/May5.jpg">
-                    </div>
-                    <div class="column">
-                        <img src="Images/May6.jpg">
-                        <img src="Images/May7.jpg">
+                <div class="stack">
+                    <div class="card">
+                        <p> EHEHEHEH </p>
                     </div>
                 </div>
             </div>
