--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <li></li>
             </ul>
             <!-- DATA -->
-            <svg class="wave_top" style="transform:rotate(180deg); transition: 0.3s" viewBox="0 0 1440 210" version="1.1"
-                xmlns="http://www.w3.org/2000/svg">
+            <svg class="wave_top" style="transform:rotate(180deg); transition: 0.3s" viewBox="0 0 1440 210"
+                version="1.1" xmlns="http://www.w3.org/2000/svg">
                 <defs>
                     <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
                         <stop stop-color="rgba(246, 73, 139, 0.59)" offset="0%"></stop>
@@ -82,18 +82,23 @@
     <section class="story">
         <div class="story_container" id="story">
             <!-- DATA -->
-            <div class="story_data">
-                <div class="story_card">
-                    <p> EHEHEHEH </p>
+            <div class="story_header">
+                <h1>How Long</h1>
+                <h2><nobr>Have We Been Together?</nobr></h2>
+                <h3><nobr>เราอยู่ด้วยกันมานานแค่ไหนแล้วนะ?</nobr></h3>
+            </div>
+            <div class="story_cards">
+                <div class="card">
+                    <h1 id="years_display">-</h1>
+                    <p> YEARS </p>
                 </div>
-                <div class="story_card">
-                    <p> EHEHEHEH </p>
+                <div class="card">
+                    <h1 id="months_display">-</h1>
+                    <p> MONTHS </p>
                 </div>
-                <div class="story_card">
-                    <p> EHEHEHEH </p>
-                </div>
-                <div class="story_card">
-                    <p> EHEHEHEH </p>
+                <div class="card">
+                    <h1 id="days_display">-</h1>
+                    <p> DAYS </p>
                 </div>
             </div>
         </div>
